# nails-agent-platform

./: .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  DESIGN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ruff.yml
config/: signals.yaml
consumer/: app.py
demo/: app.py  chat_app.py  chat_render.py  chat_state.py  comfyui_tryon.py  data_loader.py
demo/data/: action_executions.json  event_log.json  metric_snapshots.json  module_outputs.json  style_cards.json  style_library.json  trend_signals.json  trend_signals_with_score.json  user_profile.json
demo/tabs/: tab_datachain.py  tab_operations.py  tab_overview.py  tab_trends.py  tab_tryon.py
demo_v1/: app.py  app_hand_check.py
demo_v1/data/: color_feature_rules.json  hand_shape_definitions.json  nail_styles_v1.json  nail_visual_features.json  reference_hand_profiles.json  skin_tone_definitions.json  undertone_definitions.json
demo_v1/src/: __init__.py
demo_v1/决策/: data_schema_v1.md  demo_flow_v1.md
docs/: index.md
docs/assets/: nails-agent-platform-flow.drawio
docs/design/: pages-consumer.md  (+1 more)
nails_agent/: __init__.py  __main__.py
scripts/: dev.sh  douyin_login.sh  ig_login.py  xhs_login.py  xhs_rest_bridge.mjs
tests/: test_api.py  test_douyin_cdp.py  test_event_log.py  test_reviewer_guardrail.py  test_signal_collector.py  test_summarizer.py  test_trend_analyst.py  test_value_evaluator.py  test_xhs_smoke.py
web/: app.py  chat_app.py  chat_render.py  chat_state.py  comfyui_tryon.py  data_loader.py
workflows/: flux_basic.json  flux_klein.json  sdxl_basic.json
(+53 files in other folders)
